libctl 1.3 (1/7/2001)

  * Added improved "subplex" multidimensional optimization algorithm
    (for maximize-multiple and minimize-multiple).

  * Documented vector3-x, vector3-y, vector3-z functions for extracting
    vector3 components.

libctl 1.2 (7/9/2000)

  * Added new "cone" geometric object type.

  * Added reciprocal->cartesian, cartesian->lattice, lattice->reciprocal,
    etcetera functions to libgeom for converting vectors between bases.

  * Added routines rotate-vector3 and rotation-matrix3x3 for rotating vectors.

  * Added support for returning lists from external functions.

  * Fixed bug in matrix3x3-inverse function.

  * Fixed bug in find-root for converging to negative roots.

  * Use Nelder-Mead simplex algorithm for multi-dimensional minimization
    (it seems to be more robust than the old routine).

libctl 1.1.1 (1/28/2000)

  * Use CPPFLAGS environment variable instead of the less-standard
    INCLUDES to pass -I flags to the configure script (for header files
    in non-standard locations).

  * Compilation fixes.  We need to set SHELL in the Makefile for make on
    some systems.  Also added rule to insure ctl-io.h is created before
    main.c is compiled.  Thanks to Christoph Becher for the bug reports.

libctl 1.1 (1/2/2000)

  * geom: radius and height of objects is now permitted to be zero.

  * geom: material_of_point_* routines now report whether the point
    is in any object; necessary for use with MPB 0.9.

  * Added man page for gen-ctl-io, based on a contribution by
    James R. Van Zandt.

libctl 1.0.1 (11/22/1999)

  * geom: handle case where ensure-periodicity is false.

  * geom: bug fix in geometric-objects-lattice-duplicates for
    non-orthogonal lattices; thanks to Karl Koch for the bug report.

libctl 1.0 (11/19/1999)

  * Initial public release.