@@ -66,6 +66,7 @@ typedef double number;
 typedef short boolean;
 typedef char *string;
 typedef SCM list;
+typedef SCM function;
 typedef SCM object;
 
   /* define vector3 as a structure, not an array, so that it can
@@ -130,6 +131,7 @@ extern SCM matrix3x32scm(matrix3x3 m);
 #define ctl_convert_boolean_to_scm(x) gh_bool2scm(x)
 #define ctl_convert_vector3_to_scm(x) vector32scm(x)
 #define ctl_convert_matrix3x3_to_scm(x) matrix3x32scm(x)
+#define ctl_convert_function_to_scm(x) (x)
 #define ctl_convert_object_to_scm(x) (x)
 #define ctl_convert_list_to_scm(x) (x)
 
@@ -139,6 +141,7 @@ extern SCM matrix3x32scm(matrix3x3 m);
 #define ctl_convert_boolean_to_c(x) gh_scm2bool(x)
 #define ctl_convert_vector3_to_c(x) scm2vector3(x)
 #define ctl_convert_matrix3x3_to_c(x) scm2matrix3x3(x)
+#define ctl_convert_function_to_c(x) (x)
 #define ctl_convert_object_to_c(x) (x)
 #define ctl_convert_list_to_c(x) (x)
 
@@ -152,8 +155,9 @@ extern boolean ctl_get_boolean(char *identifier);
 extern char* ctl_get_string(char *identifier);
 extern vector3 ctl_get_vector3(char *identifier);
 extern matrix3x3 ctl_get_matrix3x3(char *identifier);
-extern list ctl_get_list(char *identifier);
-extern object ctl_get_object(char *identifier);
+#define ctl_get_function(identifier) gh_lookup(identifier)
+#define ctl_get_object(identifier) gh_lookup(identifier)
+#define ctl_get_list(identifier) gh_lookup(identifier)
 
 extern void ctl_set_integer(char *identifier, integer value);
 extern void ctl_set_number(char *identifier, number value);
@@ -163,6 +167,7 @@ extern void ctl_set_vector3(char *identifier, vector3 value);
 extern void ctl_set_matrix3x3(char *identifier, matrix3x3 value);
 extern void ctl_set_list(char *identifier, list value);
 extern void ctl_set_object(char *identifier, object value);
+extern void ctl_set_function(char *identifier, function value);
 
 /**************************************************************************/
 
