@@ -69,6 +69,8 @@ specific type.  The <code><i>type</i></code> parameter can be one of:
 
 <li><code>'string</code> - a string
 
+<li><code>'function</code> - a function (in C, a Guile SCM function pointer)
+
 <li><code>'<i>class</i></code> - an member of <code><i>class</i></code>
 
 <li><code>(make-list-type <i>el-type</i>)</code> - a list of elements
