@@ -1,3 +1,6 @@
+  * Added support for passing 'function types back and forth
+    (just a SCM object pointing to a Scheme function).
+
 libctl 1.3 (1/7/2001)
 
   * Added improved "subplex" multidimensional optimization algorithm
